tests/baselines/reference/captureThisInSuperCall.errors.txt
tests/cases/compiler/captureThisInSuperCall.ts(6,21): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'A'.


==== tests/cases/compiler/captureThisInSuperCall.ts (1 errors) ====
    class A {
        constructor(p:any) {}
    }
    
    class B extends A {
        constructor() { super({ test: () => this.someMethod()}); } 
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'A'.
        someMethod() {}
    }